--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ width: 20%;
 
 .link{
     float: right;
+    text-decoration: none;
 }
+
 h2{text-align: center;
     font-size: 30px;
 
@@ -98,6 +100,7 @@ input#text {
       padding: 50px;
       border-radius: 50px;
       box-sizing: border-box;
+      text-align: start;
   }
   
   .contact {
