--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
-body{
-    background: grey;
+body{background-image: url(https://cdn.wonderfulengineering.com/wp-content/uploads/2014/04/code-wallpaper-11.jpg);
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .header {
