--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ width: 20%;
     float: right;
     text-decoration: none;
     background: limegreen;
+    margin-right: 92px;
 }
 
 h2{text-align: center;
