--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body{background-image: url(https://cdn.wonderfulengineering.com/wp-content/uploa
     margin-bottom: 50px;
 }
 
+.wrapper, .wrapper2{
+    background: black;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    
+}
+
 .header {
     background: teal;
     margin-left: 50px;
@@ -17,6 +25,7 @@ font-family: 'Pacifico';
 padding: 20px;
 text-align: center;
 width: 20%; 
+text-align: center;
 }
 
 .link{
@@ -43,14 +52,14 @@ h2{text-align: center;
 
 img{
     float: left;
-    height: 200px;
+    height: 150px;
 
 }
 
 img#softball{
     float: left;
     box-sizing: border-box;
-    height: 253px;
+    width: 0 auto;
 }
 
 p#me, p#sport{padding-left: 70px;
