--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,7 @@ img#softball{
     width: 0 auto;
 }
 
-p#me, p#sport{padding-left: 70px;
-    margin-left: 10%;
+p#me, p#sport{
 text-indent: 50px;}
 
 
