--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,19 @@ input#text {
     padding: 20px;
     height: 100%;
   }
+
+  #UNLV{
+      position: absolute;
+      bottom: 40px;
+  }
+
+  #family{
+      margin: 40px, 0px, 30px, 20px;
+      height: 100px;
+  }
+#Hawaii{
+    clear: both;
+    height: 200px;
+    width: 100px;
+    margin-right: 50%;
+}
